[gd_scene load_steps=8 format=3 uid="uid://dhxl14wwwnsms"]

[ext_resource type="Shader" path="res://addons/eh_jogos.transitions/shader/transition.gdshader" id="1"]
[ext_resource type="Script" path="res://addons/eh_jogos.transitions/eh_Transitions.gd" id="2"]
[ext_resource type="Resource" uid="uid://c26dm3bn8c8ee" path="res://addons/eh_jogos.transitions/transitions_data/circular_close_open.tres" id="2_pgovs"]
[ext_resource type="Texture2D" uid="uid://dn700mbpwd3cc" path="res://addons/eh_jogos.transitions/textures/circular_grayscale.png" id="4"]
[ext_resource type="AnimationLibrary" uid="uid://c005a2dgm7gkx" path="res://addons/eh_jogos.transitions/animations/global_anim_library.tres" id="5_g8prh"]

[sub_resource type="ViewportTexture" id="ViewportTexture_b437l"]
viewport_path = NodePath("ResolutionFixedMask/MaskViewport")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gfeo7"]
resource_local_to_scene = true
shader = ExtResource("1")
shader_parameter/cutoff = 0.0
shader_parameter/smooth_size = 0.0
shader_parameter/mask = SubResource("ViewportTexture_b437l")

[node name="TransitionLayer" type="CanvasLayer"]
layer = 120
script = ExtResource("2")
transition_data = ExtResource("2_pgovs")

[node name="ResolutionFixedMask" type="SubViewportContainer" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
stretch = true

[node name="MaskViewport" type="SubViewport" parent="ResolutionFixedMask"]
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_update_mode = 0

[node name="MaskTexture" type="TextureRect" parent="ResolutionFixedMask/MaskViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("4")
stretch_mode = 6

[node name="Transitions" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_gfeo7")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Transitions"]
autoplay = "RESET"
libraries = {
"": ExtResource("5_g8prh")
}
next/black_to_white_out = &"RESET"
next/cut_from_color = &"RESET"
next/fade_out = &"RESET"
next/white_to_black_out = &"RESET"
metadata/base_export_path = "res://addons/eh_jogos.transitions/animations"
